...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Launch Screen View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LaunchScreenViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                        <connections>
                                                            <outlet property="homeMoviePosterImageView" destination="70U-kh-mJC" id="xbf-10-y5Y"/>
                                                        </connections>
                                                    </collectionViewCell>
                                                </cells>
                                            </collectionView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TV Shows" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nKb-9F-rOA">
                                                <rect key="frame" x="8" y="480" width="100" height="25"/>
                                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="20"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsVerticalScrollIndicator="NO" indicatorStyle="white" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="C2b-Y9-dyh">
...
                            <constraint firstAttribute="trailing" secondItem="ptY-DB-XoG" secondAttribute="trailing" id="E2c-aA-ABq"/>
                            <constraint firstAttribute="bottom" secondItem="ptY-DB-XoG" secondAttribute="bottom" id="Mjx-Rx-mRy"/>
                            <constraint firstItem="xS9-rx-HUc" firstAttribute="width" secondItem="AhK-9B-BuQ" secondAttribute="width" id="rGM-nd-T6i"/>
                            <constraint firstItem="ptY-DB-XoG" firstAttribute="leading" secondItem="AhK-9B-BuQ" secondAttribute="leading" id="vhM-hV-5GI"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="z1V-E9-DBg"/>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                    <size key="freeformSize" width="375" height="800"/>
                    <connections>
                        <outlet property="activityIndicatorView" destination="GHj-Wf-gGA" id="ntX-NW-MAE"/>
                        <outlet property="gradientView" destination="xS9-rx-HUc" id="1j6-S6-7Nd"/>
                        <outlet property="movieCollectionView" destination="2Ja-VI-NAY" id="lAg-CW-qfg"/>
...
                            <constraint firstItem="Fjh-2c-LV3" firstAttribute="centerY" secondItem="2Cy-ih-WYQ" secondAttribute="centerY" id="nhj-xo-acH"/>
                        </constraints>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="P73-mj-xO5" appends="YES" id="BZE-5W-XHk"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Account" id="ymc-BC-KTq">
                        <barButtonItem key="leftBarButtonItem" image="ic_back_36pt" id="D1n-Hr-kUf">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="goBackToHome:" destination="dq7-xW-qdU" id="h90-gR-ttL"/>
                                <segue destination="Mbv-qE-3a9" kind="unwind" identifier="unwindSegueToHome" unwindAction="unwindFromAccountWithSegue:" id="uut-SO-5KC"/>
                            </connections>
...
                            <constraint firstItem="I7m-aR-Baw" firstAttribute="centerX" secondItem="Fxp-1l-77F" secondAttribute="centerX" id="VCu-ww-bGd"/>
                            <constraint firstItem="tBo-8h-yJ4" firstAttribute="centerY" secondItem="Xvd-3A-nFY" secondAttribute="centerY" id="XQh-st-YP4"/>
                            <constraint firstItem="mSr-0V-Oop" firstAttribute="centerX" secondItem="Fxp-1l-77F" secondAttribute="centerX" id="jPb-Lo-Rng"/>
                            <constraint firstItem="A8e-hb-8vE" firstAttribute="top" secondItem="eMb-VM-zrl" secondAttribute="bottom" constant="40" id="mG5-wh-wBN"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="zIJ-yc-ilG">
                        <barButtonItem key="rightBarButtonItem" image="ic_power_24pt" id="96e-d9-fBh">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <segue destination="tyg-og-6QM" kind="presentation" identifier="logOutSegue" id="c0Q-P1-Rtl"/>
                            </connections>
                        </barButtonItem>
...
